collaps done, just a little problem in css to fix

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -24,4 +24,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 33px;
 }
