--- a/src/styles/Collaps.css
+++ b/src/styles/Collaps.css
@@ -15,3 +15,77 @@
     font-weight: 500;
     font-size: 24px;
 }
+
+.collaps-desc {
+    background: #F6F6F6;
+    height: 100%;
+    padding: 20px;
+    margin-bottom: 33px;
+    transition: 0.4s ease-in-out all;
+    opacity: 1;
+}
+
+.collaps-desc p {
+    margin: 0;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 34.22px;
+    color: #FF6060;
+}
+
+.desc-hide {
+    transition: 0.2s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+}
+
+
+.collaps-title:active .arrowUp {
+    transition: 0.1s ease-in-out;
+    animation: rotate 0.1s;
+}
+
+
+
+
+@keyframes rotate {
+    0% {
+        transform: rotateZ(10deg)
+    }
+
+    10% {
+        transform: rotateZ(30deg)
+    }
+
+    20% {
+        transform: rotateZ(50deg);
+    }
+
+    30% {
+        transform: rotateZ(80deg)
+    }
+
+    40% {
+        transform: rotateZ(100deg)
+    }
+
+    50% {
+        transform: rotateZ(110deg);
+    }
+
+    70% {
+        transform: rotateZ(130deg)
+    }
+
+    80% {
+        transform: rotateZ(140deg);
+    }
+
+    90% {
+        transform: rotateZ(160deg)
+    }
+
+    100% {
+        transform: rotateZ(180deg);
+    }
+}
